gcc/testsuite/rust/rustc/ui/extern/issue-36122-accessing-externed-dst.rs
fn main() {
    extern {
        static symbol: [usize]; // { dg-error ".E0277." "" { target *-*-* } }
    }
    println!("{}", symbol[0]);
}

